# vextract

./: .gitignore  README.md  pyproject.toml
data/extracted_data/Be22Re-Fig3/: 15_GPa.csv
data/extracted_data/CSH-Fig1a/: 174_GPa.csv  210_GPa.csv  220_GPa.csv  243_GPa.csv  250_GPa.csv  258_GPa.csv  267_GPa.csv
data/extracted_data/CSH-Fig2b/: 00_T.csv  01_T.csv  03_T.csv  06_T.csv  09_T.csv
data/extracted_data/GeSe4-FigB4/: 13p5_GPa.csv  13p5_GPa_higher_res.csv  16_GPa.csv  24_GPa.csv  README.md
data/extracted_data/MnS2/: 13_GPa.csv  13_GPa_higher_res.csv  16_GPa.csv  26_GPa.csv  README.md
data/source_data/: 31_ReBe22_OmniDAC_Run1_15p0bar_14p9GPa_Warming_At5K_Withoutlaser_V34I25_0p1mA
notebooks/: 01_Be22Re-Fig3_extract.ipynb  02_CSH-Fig1a_extract.ipynb  03_CSH-Fig2b_extract.ipynb  04_article_plots.ipynb  05_MnS2.ipynb  06_MnS2_higher_res.ipynb
vextract/: convert.py  filter.py  svg.py  unwrap.py
